syntax = "proto3";

package rapid.public_api.v1;

import "protoc-gen-openapiv2/options/annotations.proto";

message DeepHealthCheckRequest {}

message DeepHealthCheckResponse {
  string database_status = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["database_status"]
    }
  };
}
